[project]
name = "top-kex"
version = "0.1.0"
description = "CLI d'analyse de negociation SSH"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "paramiko>=4.0.0",
    "typer>=0.21.1",
]

[project.scripts]
top-kex = "top_kex.ssh_checker:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "top_kex"
module-root = "src"
source-include = [
    "algorithms/**/*.json",
]


[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
